# py2spack

./: .pre-commit-config.yaml  CHANGELOG.md  CSCS Internship Project Description.md  Dockerfile  Progress Report.md  README.md  parse_pyproject.py  pyproject.toml  tool-name-ideas.txt
.github/workflows/: run-installation-tests.yaml  run-pytest.yaml  run-tests.yaml
docker_image_testing/: Dockerfile
docs/: conf.py  implementation.md  index.md  installation.md  overview.md  usage.md  workflow.md
example-python-package/: README.md  pyproject.toml
example-python-package/src/example_python_package_intern_pyspack/: utils.py
example-python-package/tests/: test_utils.py
example-spack-package/py-example-python-package-intern-pyspack/: package.py
example_python_package/: README.md  pyproject.toml
example_python_package/src/example_python_package_intern_pyspack/: __init__.py  utils.py
src/intern_pyspack/: parse_pyproject.py
src/py2spack/: __init__.py  cli.py  cmake_conversion.py  conversion_tools.py  core.py  external.py  loading.py  main.py  package_providers.py  parse_pyproject.py  parsing.py  pyproject_parsing.py  spack_utils.py  utils.py
tests/: __init__.py  test_cli.py  test_cmake_conversion.py  test_conversion_tools.py  test_core.py  test_external.py  test_integration.py  test_loading.py  test_main.py  test_package_providers.py  test_parse_pyproject.py  test_parsing.py  test_pyproject_class.py  test_pyproject_parsing.py  test_spack_utils.py  test_spackpypkg_class.py  test_utils.py
tests/sample_data/sample_repo/: repo.yaml
tests/test_data/black/: package.py
tests/test_data/scikit-build-core/minimal/: CMakeLists.txt  minimal.cpp  pyproject.toml
tests/test_data/scikit-build-core/pybind11-simple/: example.cpp  pyproject.toml
tests/test_data/test_archive/: pyproject.toml
tests/test_data/test_repo/: repo.yaml
