[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py2spack"
authors = [{name = "davhofer", email = "davhofer@ethz.ch"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["requests", "pyproject_metadata"]

[project.urls]
Home = "https://github.com/davhofer/py2spack/"


[tool.ruff]
    exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "B", "N", "D"]
ignore = []


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-commas = false 
line-ending = "auto"


[tool.mypy]
warn_return_any = true  
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unreachable = true 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

