[build-system]
requires = ["hatchling"]  # probably add some version constraints here 
build-backend = "hatchling.build"

[project]
name = "py2spack"
authors = [{name = "davhofer", email = "davhofer@ethz.ch"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: Utilities",
  "Typing :: Typed",
]
description = "Tool to create spack package definitions from distributable Python packages."
dynamic = ["version"]
dependencies = [
    "packaging>=20", 
    "requests>=2.30", 
    "tomli>=1.2",
]

[project.urls]
Home = "https://github.com/davhofer/py2spack/"


[tool.ruff]
    exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "N", "D"]
ignore = []


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
skip-magic-trailing-commas = false 


[tool.mypy]
warn_return_any = true  
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unreachable = true 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

