[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example_python_package_intern_pyspack"
version = "0.1.3"
authors = [
    { name="David Hofer", email="davhofer@ethz.ch" },
]
description = "An example pure-python package"
readme  = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

